# Slam

Location_G2O/5-18-data/: 518data_1.txt  518data_2.txt  dingdian14.txt  dingdian19.txt  dingdian25.txt  jinjuli1.txt  jinjuli3.txt  readme.txt  yuanjuli7.txt  zhongjuli4.txt
Location_G2O/5-18-data/incar/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  36  37  38  4  40  41  42  5  6  7  8  (+1 more)
Location_G2O/5-18-data/outcar/: 1-1  1-2  1-3  2-1  2-2  2-3  3-1  3-2  4-1  4-2  4-3  5-1  5-2  5-3  6-1  6-2  6-3  8-1  8-2  8-3  8-4  8-5  8-6  8-7  8-8
Location_G2O/ch6/: g2oCurveFitting.cpp
Location_G2O/cpp_code/: CMakeLists.txt  g2oCurveFitting.cpp  g2oCurveFitting.cpp.bak  g2oCurveFitting.cpp.bak_2  main.c  main.elf
ORB_SLAM2-master/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake
ORB_SLAM2-master/include/: Frame.h
PA1_code/: CMakeLists.txt  useHello
PA3_code/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  drawTrajectory  draw_trajectory.cpp
PA4_code/: CMakeLists.txt  ceresCurveFitting.cpp  data_plot.ipynb  g2oCurveFitting.cpp  gaussNewton.cpp  gaussnewton.cpp  out_data.txt  pa4_test  pa4_test.cpp
PA4_code/.ipynb_checkpoints/: data_plot-checkpoint.ipynb
PA4_code/ceresData/: fitting_paras.txt
PA4_code/g2oData/: fitting_paras.txt  origin_data.txt
slambook2-master/ch3/: plotTrajectory
slambook2-master/ch4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  useSophus
slambook2-master/ch4/example/: Makefile  cmake_install.cmake
slambook2-master/ch5/imageBasics/: CMakeLists.txt
slambook2-master/ch5/rgbd/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  joinMap
slambook2-master/ch5/stereo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  stereoVision  stereoVision.cpp
slambook2-master/ch7/: pose_estimation_2d2d.cpp
slambook2-master/testspace/: echoclient  echoclient.c  echoserver  echoserver.c  myecho  myecho.c  sharing  sharing.c  testdata.txt
slambook2-master/testspace/test1/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp  libHelloSLAM.h  useHello.cpp
slambook2-master/testspace/test2/: CMakeLists.txt  eigenGeometry  eigenGeometry.cpp  eigenMatrix.cpp  hw.cpp
slambook2-master/testspace/test6/: CMakeLists.txt  gaussNewton.cpp
slambook2-master/testspace/test7/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  orb_cv  orb_cv.cpp  pose_estimation_2d2d  pose_estimation_2d2d.cpp  triangulation  triangulation.cpp
slambook2-master/testspace/test8/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  direct_method.cpp
